kubernetes/apps/bootstrap/netbootxyz/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: netbootxyz
  namespace: bootstrap
  labels:
    app: netbootxyz
spec:
  ports:
    - name: assets
      port: 80
      targetPort: 80
    - name: admin
      port: 3000
      targetPort: 3000
  clusterIP: None
  selector:
    app: netbootxyz
---
apiVersion: v1
kind: Service
metadata:
  name: netbootxyz-tftp-mgmt
  namespace: bootstrap
  labels:
    app: netbootxyz
  annotations:
    lbipam.cilium.io/sharing-key: mgmt-bootstrap
spec:
  ports:
    - name: web
      port: 69
      protocol: UDP
      targetPort: 69
  type: LoadBalancer
  selector:
    app: netbootxyz
---
apiVersion: v1
kind: Service
metadata:
  name: netbootxyz-tftp-service
  namespace: bootstrap
  labels:
    app: netbootxyz
  annotations:
    lbipam.cilium.io/sharing-key: service-bootstrap
spec:
  ports:
    - name: web
      port: 69
      protocol: UDP
      targetPort: 69
  type: LoadBalancer
  selector:
    app: netbootxyz
---
apiVersion: v1
kind: Service
metadata:
  name: netbootxyz-tftp-k8s00
  namespace: bootstrap
  labels:
    app: netbootxyz
  annotations:
    lbipam.cilium.io/sharing-key: k8s00-bootstrap
spec:
  ports:
    - name: web
      port: 69
      protocol: UDP
      targetPort: 69
  type: LoadBalancer
  selector:
    app: netbootxyz
